test/org/midica/testfiles/failing/cond-empty-in-element.midica
INCLUDE inc/instruments.midica

VAR $x = 1

{ if $x in 1;2;;5
	0  c  /4
}
